--- a/OOPS/OOPS_Practise.ipynb
+++ b/OOPS/OOPS_Practise.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "PKgcuEwutedU"
       },
@@ -84,7 +84,121 @@
       "metadata": {
         "id": "rYrLHyfDVqb2"
       },
-      "execution_count": 2,
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class ComplexNumber:\n",
+        "    def __init__(self, real, imaginary):\n",
+        "        # Initialize the real and imaginary parts\n",
+        "        self.real = real\n",
+        "        self.imaginary = imaginary\n",
+        "\n",
+        "    def add(self, other):\n",
+        "        # Add two complex numbers\n",
+        "        real_part = self.real + other.real\n",
+        "        imaginary_part = self.imaginary + other.imaginary\n",
+        "        return ComplexNumber(real_part, imaginary_part)\n",
+        "\n",
+        "    def subtract(self, other):\n",
+        "        # Subtract two complex numbers\n",
+        "        real_part = self.real - other.real\n",
+        "        imaginary_part = self.imaginary - other.imaginary\n",
+        "        return ComplexNumber(real_part, imaginary_part)\n",
+        "\n",
+        "    def multiply(self, other):\n",
+        "        # Multiply two complex numbers\n",
+        "        real_part = (self.real * other.real) - (self.imaginary * other.imaginary)\n",
+        "        imaginary_part = (self.real * other.imaginary) + (self.imaginary * other.real)\n",
+        "        return ComplexNumber(real_part, imaginary_part)\n",
+        "\n",
+        "    def __eq__(self, other):\n",
+        "        # Check if two complex numbers are equal\n",
+        "        return self.real == other.real and self.imaginary == other.imaginary\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        # Return the string representation in the format \"a + bi\"\n",
+        "        sign = \"+\" if self.imaginary >= 0 else \"-\"\n",
+        "        return f\"{self.real} {sign} {abs(self.imaginary)}i\""
+      ],
+      "metadata": {
+        "id": "cIkvwPQCZUkR"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Fraction:\n",
+        "    def __init__(self, numerator, denominator):\n",
+        "        if denominator == 0:\n",
+        "            raise ValueError(\"Denominator cannot be zero.\")\n",
+        "        self.numerator = numerator\n",
+        "        self.denominator = denominator\n",
+        "        self.simplify()\n",
+        "\n",
+        "    def simplify(self):\n",
+        "        \"\"\"Simplify the fraction using the greatest common divisor (GCD).\"\"\"\n",
+        "        gcd = self.greatest_common_divisor(abs(self.numerator), abs(self.denominator))\n",
+        "        self.numerator //= gcd\n",
+        "        self.denominator //= gcd\n",
+        "        # Ensure denominator is positive\n",
+        "        if self.denominator < 0:\n",
+        "            self.numerator = -self.numerator\n",
+        "            self.denominator = -self.denominator\n",
+        "\n",
+        "    @staticmethod\n",
+        "    def greatest_common_divisor(a, b):\n",
+        "        \"\"\"Find the greatest common divisor (GCD) of two numbers.\"\"\"\n",
+        "        while b != 0:\n",
+        "            a, b = b, a % b\n",
+        "        return a\n",
+        "\n",
+        "    def add(self, other):\n",
+        "        \"\"\"Add two fractions.\"\"\"\n",
+        "        numerator = self.numerator * other.denominator + other.numerator * self.denominator\n",
+        "        denominator = self.denominator * other.denominator\n",
+        "        return Fraction(numerator, denominator)\n",
+        "\n",
+        "    def subtract(self, other):\n",
+        "        \"\"\"Subtract two fractions.\"\"\"\n",
+        "        numerator = self.numerator * other.denominator - other.numerator * self.denominator\n",
+        "        denominator = self.denominator * other.denominator\n",
+        "        return Fraction(numerator, denominator)\n",
+        "\n",
+        "    def multiply(self, other):\n",
+        "        \"\"\"Multiply two fractions.\"\"\"\n",
+        "        numerator = self.numerator * other.numerator\n",
+        "        denominator = self.denominator * other.denominator\n",
+        "        return Fraction(numerator, denominator)\n",
+        "\n",
+        "    def divide(self, other):\n",
+        "        \"\"\"Divide two fractions.\"\"\"\n",
+        "        if other.numerator == 0:\n",
+        "            raise ValueError(\"Cannot divide by zero.\")\n",
+        "        numerator = self.numerator * other.denominator\n",
+        "        denominator = self.denominator * other.numerator\n",
+        "        return Fraction(numerator, denominator)\n",
+        "\n",
+        "    def __eq__(self, other):\n",
+        "        \"\"\"Check if two fractions are equal.\"\"\"\n",
+        "        return self.numerator == other.numerator and self.denominator == other.denominator\n",
+        "\n",
+        "    def __str__(self):\n",
+        "        \"\"\"String representation of the fraction.\"\"\"\n",
+        "        return f\"{self.numerator}/{self.denominator}\"\n",
+        "\n",
+        "    def __repr__(self):\n",
+        "        \"\"\"Detailed string representation for debugging.\"\"\"\n",
+        "        return f\"Fraction(numerator={self.numerator}, denominator={self.denominator})\""
+      ],
+      "metadata": {
+        "id": "ZYPFbTxjZhHa"
+      },
+      "execution_count": 7,
       "outputs": []
     }
   ]
